--- a/client/profile/profile.css
+++ b/client/profile/profile.css
@@ -1,7 +1,7 @@
 .form-container {
 
     width: 550px;
-    margin: 140px auto;
+    margin: auto;
     font-size: 15px;
     margin-bottom: 0px;
     background: #f7f7f7;
