--- a/client/profile/profile.css
+++ b/client/profile/profile.css
@@ -1,6 +1,7 @@
+@import url("https://pro.fontawesome.com/releases/v5.10.0/css/all.css");
 .form-container {
 
-    width: 550px;
+    width: 950px;
     margin: auto;
     font-size: 15px;
     margin-bottom: 0px;
