--- a/client/home/home.css
+++ b/client/home/home.css
@@ -1,6 +1,46 @@
-.bg-carousel{
+.bg-carousel {
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center center;
     height: 600px;
+}
+
+.container-slider {
+    overflow: hidden;
+}
+
+.container-slider .slider {
+    animation: slidein 30s linear infinite;
+    white-space: nowrap;
+}
+
+.container-slider .slider .logos {
+    width: 100%;
+    display: inline-block;
+    margin: 0px 0;
+}
+
+.container-slider .slider .logos .fab {
+    width: calc(100% / 5);
+    animation: fade-in 0.5s cubic-bezier(0.455, 0.03, 0.515, 0.955) forwards;
+}
+
+@keyframes slidein {
+    from {
+        transform: translate3d(0, 0, 0);
+    }
+
+    to {
+        transform: translate3d(-100%, 0, 0);
+    }
+}
+
+@keyframes fade-in {
+    0% {
+        opacity: 0;
+    }
+
+    100% {
+        opacity: 1;
+    }
 }
