--- a/employee/login/login.css
+++ b/employee/login/login.css
@@ -1,15 +1,32 @@
 .form-container {
 
     width: 450px;
-    margin: 140px auto;
+    height: 500px;
     font-size: 15px;
     margin-bottom: 0px;
-    background: #f7f7f7;
-    box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
+    background: #f7f7f7;    
+   
     padding: 30px;
+    background: rgba(255, 255, 255, 0.5);
 }
 
-.form-container h2 {
-    margin: 50px 0 50px;
 
+
+html {
+    height: 100%;
+}
+body{
+
+    background-image:url(../../images/login.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    height: 100%;
+}
+
+.glass-effect{
+background: linear-gradient(133deg, rgb(255 225 255 / 10%), rgba(255,255,255,0.8)); 
+-webkit-backdrop-filter: blur(20px);
+box-shadow: 0 8px 32px 0 rgb(0 0 0 / 11%);
+border: 1px solig rgba(255, 255, 255, 0.18);
+border-radius: 26px;
 }
