--- a/employee/projects/app.css
+++ b/employee/projects/app.css
@@ -19,8 +19,8 @@ body {
 
 /* MAIN STYLE */
 
-.card {
-    width: 400px;
+.card-file {
+    
     height: auto;
     padding: 15px;
     box-shadow: 0 0 5px rgba(0, 0, 0, 0.15);
@@ -29,20 +29,20 @@ body {
     background: #fafbff;
 }
 
-/* .card .top {
+/* .card-file .top {
     display: flex;
     justify-content: space-between;
     align-items: center;
     width: 100%;
 } */
 
-.card p {
+.card-file p {
     font-size: 0.9rem;
     font-weight: 600;
     color: #878a9a;
 }
 
-.card button {
+.card-file button {
     outline: 0;
     border: 0;
         -webkit-appearence: none;
@@ -57,15 +57,15 @@ body {
 	padding: 8px 13px;
 }
 
-.card button:hover {
+.card-file button:hover {
 	opacity: 0.8;
 }
 
-.card button:active {
+.card-file button:active {
 	transform: translateY(5px);
 }
 
-.card .drag-area {
+.card-file .drag-area {
 	width: 100%;
 	height: 160px;
 	border-radius: 5px;
@@ -83,21 +83,21 @@ body {
 	margin-top: 10px;
 }
 
-.card .drag-area .visible {
+.card-file .drag-area .visible {
 	font-size: 18px;
 }
-.card .select {
+.card-file .select {
     color: #5256ad;
 	margin-left: 5px;
 	cursor: pointer;
 	transition: 0.4s;
 }
 
-.card .select:hover {
+.card-file .select:hover {
 	opacity: 0.6;
 }
 
-.card .container {
+.card-file .container {
 	width: 100%;
 	height: auto;
 	display: flex;
@@ -109,7 +109,7 @@ body {
 	margin-top: 10px;
 }
 
-.card .container .image {
+.card-file .container .image {
 	width: calc(26% - 19px);
 	margin-right: 15px;
 	height: 75px;
@@ -117,13 +117,13 @@ body {
 	margin-bottom: 8px;
 }
 
-.card .container .image img {
+.card-file .container .image img {
 	width: 100%;
 	height: 100%;
 	border-radius: 5px;
 }
 
-.card .container .image span {
+.card-file .container .image span {
 	position: absolute;
 	top: -2px;
 	right: 9px;
@@ -132,17 +132,17 @@ body {
 }
 
 /* dragover class will used in drag and drop system */
-.card .drag-area.dragover {
+.card-file .drag-area.dragover {
 	background: rgba(0, 0, 0, 0.4);
 }
 
-.card .drag-area.dragover .on-drop {
+.card-file .drag-area.dragover .on-drop {
 	display: inline;
 	font-size: 28px;
 }
 
-.card input,
-.card .drag-area .on-drop, 
-.card .drag-area.dragover .visible {
+.card-file input,
+.card-file .drag-area .on-drop, 
+.card-file .drag-area.dragover .visible {
 	display: none;
 }
