Set an Appointment (frontend)

--- a/client/aboutUs/aboutUs.css
+++ b/client/aboutUs/aboutUs.css
@@ -1,5 +1,5 @@
 .background-img {
-    background-image: url("../../images/interior.jpg");
+    background-image:carousel;
     background-size: cover;
     
 }
